# opal

./: .gitignore  .prettierignore  AGENTS.md  Anchor.toml  README.md  codama.json  package.json  tsconfig.json
.superstack/: frontier-idea-validation.html  idea-context.md
docs/: architecture.md  glossary.md  resolution.md  tokenomics.md
docs/adr/: 0001-rubric-relative-truth.md  0002-trusted-llm-resolver.md  0003-private-staked-voting.md  0004-single-asset-usdc.md  0005-no-fault-unresolvable.md  0006-codebase-organization.md
programs/opal/: Cargo.toml
programs/opal/src/: constants.rs  errors.rs  lib.rs  utils.rs
programs/opal/src/instructions/: challenge_llm_resolution.rs  create_assertion.rs  dispute_assertion.rs  finalize_llm_resolution.rs  finalize_undisputed.rs  finalize_vote_resolution_placeholder.rs  initialize_protocol_config.rs  mod.rs  open_vote.rs  set_council_feeds.rs  submit_llm_resolution.rs  submit_mock_llm_resolution.rs
programs/opal/src/state/: assertion.rs  llm_dispute.rs  llm_resolution_round.rs  mod.rs  protocol_config.rs  vote_dispute.rs  vote_resolution_round.rs
research/: README.md  competitive-landscape.md  idea-validation.md  ideation.md
tests/: opal.test.ts
web/: .env.local.example  .gitignore  .prettierignore  .prettierrc  AGENTS.md  README.md  eslint.config.mjs  next.config.ts  package.json  tsconfig.json
web/app/: font.ts  globals.css  layout.tsx  not-found.tsx  page.tsx  template.tsx
web/data/: assertion.ts  statements.ts
web/docs/: PRIVY_SETUP.md
web/hooks/: use-hydrated.ts
web/lib/: assertion-labels.ts  env.ts  (+3 more)
(+83 files in other folders)
